--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,8 @@ dependencies {
 
     // Firebase real-time database
     compile 'com.google.firebase:firebase-database:10.0.1'
+    // Firebase authentication
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.firebaseui:firebase-ui-auth:1.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
