--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.google.firebase.udacity.friendlychat.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -16,6 +16,10 @@
             </intent-filter>
         </activity>
 
+        <service
+            android:name=".ChatService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
